remove lighttpd index file

--- a/lighttpd.conf
+++ b/lighttpd.conf
@@ -7,7 +7,7 @@ server.modules = (
         "mod_rewrite",
 )
 
-server.document-root        = "/var/www"
+server.document-root        = "/var/www/html"
 server.upload-dirs          = ( "/var/cache/lighttpd/uploads" )
 server.errorlog             = "/var/log/lighttpd/error.log"
 server.pid-file             = "/var/run/lighttpd.pid"
@@ -19,7 +19,7 @@ accesslog.filename          = "/var/log/lighttpd/access.log"
 #dir-listing.hide-dotfiles   = "enable"
 #dir-listing.show-header     = "enable"
 
-index-file.names            = ( "index.php", "index.html", "index.md", "index.lighttpd.html", "/_h5ai/public/index.php")
+index-file.names            = ( "index.php", "index.html", "index.md", "/_h5ai/public/index.php")
 url.access-deny             = ( "~", ".inc" )
 static-file.exclude-extensions = ( ".php", ".pl", ".fcgi" )
 
