fix genomehubs/search-docker#1 - run container as non-root user

--- a/lighttpd.conf
+++ b/lighttpd.conf
@@ -3,18 +3,19 @@ server.modules = (
         "mod_accesslog",
         "mod_alias",
         "mod_compress",
+        "mod_fastcgi",
         "mod_redirect",
         "mod_rewrite",
 )
 
 server.document-root        = "/var/www/html"
-server.upload-dirs          = ( "/var/cache/lighttpd/uploads" )
-server.errorlog             = "/var/log/lighttpd/error.log"
-server.pid-file             = "/var/run/lighttpd.pid"
-server.username             = "www-data"
-server.groupname            = "www-data"
+server.upload-dirs          = ( "/lighttpd/uploads" )
+server.errorlog             = "/lighttpd/log/error.log"
+server.pid-file             = "/lighttpd/run/lighttpd.pid"
+server.username             = "lighttpd"
+server.groupname            = "lighttpd"
 server.port                 = 8080
-accesslog.filename          = "/var/log/lighttpd/access.log"
+accesslog.filename          = "/lighttpd/log/access.log"
 #dir-listing.activate        = "enable"
 #dir-listing.hide-dotfiles   = "enable"
 #dir-listing.show-header     = "enable"
@@ -23,14 +24,19 @@ index-file.names            = ( "index.php", "index.html", "index.md", "/_h5ai/p
 url.access-deny             = ( "~", ".inc" )
 static-file.exclude-extensions = ( ".php", ".pl", ".fcgi" )
 
-compress.cache-dir          = "/var/cache/lighttpd/compress/"
+compress.cache-dir          = "/lighttpd/cache/compress/"
 compress.filetype           = ( "application/javascript", "text/css", "text/html", "text/plain", "application/json" )
+
+fastcgi.server = ( ".php" => ((
+                     "bin-path" => "/usr/bin/php-cgi",
+                     "socket" => "/tmp/php.socket"
+                 )))
 
 # default listening port for IPv6 falls back to the IPv4 port
 ## Use ipv6 if available
 #include_shell "/usr/share/lighttpd/use-ipv6.pl " + server.port
 #include_shell "/usr/share/lighttpd/create-mime.assign.pl"
-include_shell "/usr/share/lighttpd/include-conf-enabled.pl"
+#include_shell "/usr/share/lighttpd/include-conf-enabled.pl"
 
 mimetype.assign   = ( ".png"  => "image/png",
                       ".jpg"  => "image/jpeg",
