--- a/lighttpd.conf
+++ b/lighttpd.conf
@@ -12,8 +12,8 @@ server.document-root        = "/var/www/html"
 server.upload-dirs          = ( "/lighttpd/uploads" )
 server.errorlog             = "/lighttpd/log/error.log"
 server.pid-file             = "/lighttpd/run/lighttpd.pid"
-server.username             = "lighttpd"
-server.groupname            = "lighttpd"
+server.username             = "root"
+server.groupname            = "root"
 server.port                 = 8080
 accesslog.filename          = "/lighttpd/log/access.log"
 #dir-listing.activate        = "enable"
